# jungedu

./: .gitignore  README.md
apps/desktop/: .env.example  package.json  tauri.conf.json  vite.config.ts
apps/desktop/src/: App.tsx  types.ts
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/layouts/: AppLayout.tsx
apps/desktop/src/lib/: bulkFiles.ts  excel.ts  fileDataUrl.ts  textSimilarity.ts
apps/desktop/src/pages/: ClassesPage.tsx  CreateExamPage.tsx  DashboardPage.tsx  OcrConfirmPage.tsx  ReviewPage.tsx  SubmissionImportPage.tsx
apps/desktop/src/services/: aiClient.ts  config.ts
apps/desktop/src/state/: appStore.ts  appStore_backup.ts
apps/frontend/: .env.example  index.html  package.json
apps/frontend/src/: App.tsx  main.tsx  types.ts  vite-env.d.ts
apps/frontend/src/application/: gradingService.ts  visionService.ts
apps/frontend/src/components/: GoogleDriveConnectBanner.tsx  SubmissionImageThumb.tsx
apps/frontend/src/config/: constants.ts  demoExamDefaults.ts  env.ts
apps/frontend/src/i18n/: i18n.ts
apps/frontend/src/layouts/: AppLayout.tsx
apps/frontend/src/lib/: draftAiDiff.ts  essayMistakeSpans.ts  excel.ts  firebase.ts  mistakeLabels.ts  rubric.ts
apps/frontend/src/pages/: ClassesPage.tsx  CreateExamPage.tsx  DashboardPage.tsx  EditExamPage.tsx  ExamsPage.tsx  GradingPage.tsx  (+5 more)
decision/: ai-security.md
design/: detail-design.md
design/screen-flow/: screen-flow-spec.md
design/sequence/: sequence.md
docs/: README.md  convert-text.md  spec-image-to-text.md
ideas/: first-idea.md
(+48 files in other folders)
