[package]
name = "jungedu_desktop"
version = "0.1.0"
description = "JungEdu AI Teacher Assistant (MVP)"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = "2"

[dependencies]
tauri = { version = "2", features = [] }
serde_json = "1"

[[bin]]
name = "jungedu_desktop"
path = "src/main.rs"

